--- a/slidify-pres/index.html
+++ b/slidify-pres/index.html
@@ -80,6 +80,20 @@
   <!-- Presenter Notes -->
 </slide>
 
+<slide class="class" id="id" style="background:;">
+  <hgroup>
+    <h2>Conclusions</h2>
+  </hgroup>
+  <article data-timings="">
+    <ol>
+<li>ease interactivity and web application deployment for charts and visualizations</li>
+<li>difficult to search for a problem to analyze</li>
+</ol>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+
     <slide class="backdrop"></slide>
   </slides>
   <div class="pagination pagination-small" id='io2012-ptoc' style="display:none;">
@@ -94,6 +108,12 @@
       <a href="#" target="_self" rel='tooltip' 
         data-slide=2 title='Proposed solution'>
          2
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=3 title='Conclusions'>
+         3
       </a>
     </li>
   </ul>
