ajustes presentacion publicacion

--- a/slidify-pres/index.html
+++ b/slidify-pres/index.html
@@ -71,8 +71,8 @@
 <h2>Results</h2>
 
 <ol>
-<li>source code: </li>
-<li>application: </li>
+<li><a href="https://github.com/andhdo/coursera_dsc_09_dataprods_project.git">source code</a></li>
+<li><a href="https://andhdo.shinyapps.io/coursera_dsc_09_dataprods_project/">application</a> </li>
 <li>slidify pres: </li>
 </ol>
 
