modificaciones path slides

--- a/slidify-pres/index.html
+++ b/slidify-pres/index.html
@@ -73,7 +73,7 @@
 <ol>
 <li><a href="https://github.com/andhdo/coursera_dsc_09_dataprods_project.git">source code</a></li>
 <li><a href="https://andhdo.shinyapps.io/coursera_dsc_09_dataprods_project/">application</a> </li>
-<li>slidify pres: </li>
+<li><a href="http://andhdo.github.io/coursera_dsc_09_dataprods_project/slidify-pres/">slidify pres</a>: </li>
 </ol>
 
   </article>
